--- a/styles.css
+++ b/styles.css
@@ -191,12 +191,41 @@ html {
     animation: float 6s ease-in-out infinite;
 }
 
+.floating-element:nth-child(1) {
+    animation-delay: 0s;
+}
+
 .floating-element:nth-child(2) {
     animation-delay: -2s;
 }
 
 .floating-element:nth-child(3) {
     animation-delay: -4s;
+}
+
+.floating-element:nth-child(4) {
+    animation-delay: -1s;
+    animation-duration: 8s;
+}
+
+.floating-element:nth-child(5) {
+    animation-delay: -3s;
+    animation-duration: 7s;
+}
+
+.floating-element:nth-child(6) {
+    animation-delay: -5s;
+    animation-duration: 9s;
+}
+
+.floating-element:nth-child(7) {
+    animation-delay: -2.5s;
+    animation-duration: 6.5s;
+}
+
+.floating-element:nth-child(8) {
+    animation-delay: -4.5s;
+    animation-duration: 7.5s;
 }
 
 /* Section Styles */
